fixed button and packages

--- a/templates/Test.html
+++ b/templates/Test.html
@@ -26,8 +26,9 @@
 </div>
 
 <!-- <div id="get_timeList" onclick="getTimeList()"> Record </div> -->
-<button type="button" class="btn btn-danger" name="record" value="Record"></button>
-
+<form  method="POST" >
+    <button type="submit" class="btn btn-danger" name="record" value="Record"></button>
+</form>
 <br>
 <br>
 {{table|safe}}
