--- a/templates/Test.html
+++ b/templates/Test.html
@@ -22,7 +22,7 @@
 </div>
 
 <div id="data_disp" onclick="incr_Users()">
-    <h3 id="phoneUserCount"> Data </h3>
+    <h3 id="phoneUserCount"> Sum: </h3> {{data_time_sum}}
 </div>
 
 <!-- <div id="get_timeList" onclick="getTimeList()"> Record </div> -->
