--- a/templates/Test.html
+++ b/templates/Test.html
@@ -58,6 +58,7 @@
 
 <div id="data_disp" onclick="incr_Users()">
     <h3 id="phoneUserCount"> Sum: </h3> {{data_time_sum}}
+    <h3>Total Sum: {{data_time_sum}}</h3>
 </div>
 
 <!-- <div id="get_timeList" onclick="getTimeList()"> Record </div>
