--- a/templates/Test.html
+++ b/templates/Test.html
@@ -57,7 +57,7 @@
     
 
 <div id="data_disp" onclick="incr_Users()">
-    <h3 id="phoneUserCount"> Sum: </h3> {{data_time_sum}}
+    <h3 id="phoneUserCount"> Sum: </h3>
 </div>
 
 <!-- <div id="get_timeList" onclick="getTimeList()"> Record </div>
